--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.2.2",
     "@material-ui/icons": "^3.0.1",
     "ajv": "^6.5.4",
+    "google-maps-react": "^2.0.2",
     "mongoose": "^5.3.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
